[gd_scene load_steps=15 format=3 uid="uid://d014fhdoxeh0f"]

[ext_resource type="Script" path="res://src/tools/cauldron.gd" id="1_ri5r0"]
[ext_resource type="PackedScene" uid="uid://bveuv4e6v8w78" path="res://assets/graphics/gltf/cauldron_empty.gltf" id="2_7kut5"]
[ext_resource type="PackedScene" uid="uid://dshe5s8y45usg" path="res://assets/graphics/gltf/cauldron.gltf" id="3_32sis"]
[ext_resource type="PackedScene" uid="uid://dkt4ajcywuap4" path="res://src/tools/interactable.tscn" id="4_of3ea"]
[ext_resource type="AudioStream" uid="uid://dhqhi0lnqfdyo" path="res://assets/audio/sfx/bottle.wav" id="5_spe3j"]
[ext_resource type="AudioStream" uid="uid://bruqbkhgtdhpb" path="res://assets/audio/sfx/brew.wav" id="6_33xo8"]
[ext_resource type="AudioStream" uid="uid://mhmmjugvmmvj" path="res://assets/audio/sfx/bubble3.wav" id="6_46ro6"]
[ext_resource type="AudioStream" uid="uid://bb8r0lyj20td" path="res://assets/audio/sfx/brewing loop.wav" id="7_7ul0l"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mgho5"]

[sub_resource type="Curve" id="Curve_7jkym"]
_data = [Vector2(0, 0.627273), 0.0, 0.0, 0, 0, Vector2(0.613043, 1), -2.58662e-07, -2.58662e-07, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]

[sub_resource type="CurveTexture" id="CurveTexture_dlgtp"]
curve = SubResource( "Curve_7jkym" )

[sub_resource type="ParticlesMaterial" id="ParticlesMaterial_d3fju"]
emission_shape = 1
emission_sphere_radius = 0.2
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1.34
initial_velocity_max = 1.34
radial_accel_min = -1.61
radial_accel_max = 0.75
angle_max = 2.8
scale_min = 0.06
scale_max = 0.1
scale_curve = SubResource( "CurveTexture_dlgtp" )

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_edtdw"]
albedo_color = Color(0.368627, 0.372549, 0.458824, 1)

[sub_resource type="SphereMesh" id="SphereMesh_cmiqa"]
material = SubResource( "StandardMaterial3D_edtdw" )

[node name="Cauldron" type="Node3D"]
script = ExtResource( "1_ri5r0" )

[node name="Box" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Box"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource( "BoxShape3D_mgho5" )

[node name="BrewingParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(0, -1, 0, 1, 0, 0, 0, 0, 1, 0, 0.498526, 0)
emitting = false
amount = 6
lifetime = 1.2
process_material = SubResource( "ParticlesMaterial_d3fju" )
draw_pass_1 = SubResource( "SphereMesh_cmiqa" )

[node name="BrewDoneParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(0, -1, 0, 1, 0, 0, 0, 0, 1, 0, 0.498526, 0)
emitting = false
amount = 24
lifetime = 1.2
one_shot = true
explosiveness = 0.9
process_material = SubResource( "ParticlesMaterial_d3fju" )
draw_pass_1 = SubResource( "SphereMesh_cmiqa" )

[node name="cauldron_empty" parent="." instance=ExtResource( "2_7kut5" )]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.1, 0)

[node name="cauldron" parent="." instance=ExtResource( "3_32sis" )]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.27442, 0)
visible = false

[node name="Interactable" parent="." instance=ExtResource( "4_of3ea" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="FillBottlePlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( "5_spe3j" )
unit_db = -8.0

[node name="AddIngredientPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( "6_46ro6" )
unit_db = -12.0

[node name="BrewingPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( "7_7ul0l" )

[node name="BrewDonePlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( "6_33xo8" )

[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
